# zql

./: .gitignore  Cargo.toml  extension.toml
languages/sql/: config.toml
src/: lib.rs
zql-ext/src/: lib.rs
zql-server/: Cargo.toml
zql-server/src/: main.rs
zql-server/src/config/: mod.rs  types.rs
zql-server/src/db/: connection.rs  mod.rs  provider.rs  schema.rs
zql-server/src/db/providers/: mod.rs  postgres.rs
zql-server/src/lsp/: code_actions.rs  commands.rs  completions.rs  diagnostics.rs  hover.rs  mod.rs  server.rs
zql-server/src/output/: formatter.rs
